add Cursor IDE to package list

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -80,6 +80,7 @@ packages:
     - "1password"
     - "1password-cli"
     - "aerospace"
+    - "cursor"
     - "discord"
     - "ghostty"
     - "google-chrome"
