feat(aerospace): enhance configuration for workspace management and application detection
- Update `after-startup-command` to include workspace movement commands for better multi-monitor support
- Refine keybindings for window focus to wrap around all monitors
- Add new application detection rules for moving specific applications to designated workspaces
- Clean up commented-out workspace commands in configuration

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -10,8 +10,10 @@ packages:
       - "nikitabobko/tap"
       - "norwoodj/tap"
       - "snyk/tap"
+      - "FelixKratz/formulae"
     brews:
       - "pycparser"
+      - "borders"
       - "cffi"
       - "cryptography"
       - "ansible"
