chore(dot_zshrc): update KUBECONFIG path and add .NET, Java, and ngrok configurations
- Change KUBECONFIG path to reflect new cluster structure
- Add environment variables for .NET and Java configurations
- Include ngrok completion setup if ngrok is installed
- Clean up ROADMAP.md by removing outdated configuration management section
- Add 'watch' to the list of brew packages in packages.yaml

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -12,6 +12,7 @@ packages:
       - "snyk/tap"
     brews:
       - "pycparser"
+      - "watch"
       - "cffi"
       - "cryptography"
       - "ansible"
