chore(run_once_before_install): update installation script and package list
- Added installation check for 1Password CLI in the run_once_before_install.sh.tmpl script
- Removed specific package installation for a particular hostname
- Updated packages.yaml to include gcloud-cli and raycast, and removed aerospace from casks

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -3,10 +3,8 @@ packages:
     taps:
       - "dagger/tap"
       - "equinix-labs/otel-cli"
-      - "homebrew/bundle"
       - "goreleaser/tap"
       - "hashicorp/tap"
-      - "homebrew/services"
       - "nikitabobko/tap"
       - "norwoodj/tap"
       - "snyk/tap"
@@ -80,11 +78,13 @@ packages:
     casks:
       - "1password"
       - "1password-cli"
-      - "aerospace"
       - "cursor"
+      - "gcloud-cli"
       - "ghostty"
       - "google-chrome"
       - "ngrok"
+      - "nikitabobko/tap/aerospace"
+      - "raycast"
       - "signal"
       - "slack"
       - "spotify"
