chore(dot_zshrc, packages.yaml): replace NVM with FNM and add FNM to package list
- Removed NVM configuration from dot_zshrc.tmpl and added FNM (Fast Node Manager) setup.
- Updated packages.yaml to include FNM in the package list.

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -58,6 +58,7 @@ packages:
       - "yq"
       - "zoxide"
       - "zsh-syntax-highlighting"
+      - "fnm"
       - "dagger/tap/dagger"
       - "equinix-labs/otel-cli/otel-cli"
       - "hashicorp/tap/vault"
