chore(chezmoi): update ignore file and add installation scripts for Node.js and Darwin packages
- Added node_modules and related directories to .chezmoiignore to prevent tracking of Node.js dependencies.
- Created run_onchange_01_darwin-install-packages.sh.tmpl for managing Darwin-specific package installations via Homebrew.
- Created run_onchange_02_node-install.sh.tmpl for installing specified Node.js versions using FNM.
- Updated packages.yaml to include Node.js version 22.18.0 as the default.

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -117,3 +117,7 @@ packages:
       - gcc
       - 1password
       - 1password-cli
+  nodejs:
+    default: "22.18.0"
+    versions:
+      - "22.18.0"
