--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -117,7 +117,16 @@ packages:
       - gcc
       - 1password
       - 1password-cli
-  nodejs:
+env:
+  fnm:
     default: "22.18.0"
     versions:
       - "22.18.0"
+  tfenv:
+    default: "1.8.0"
+    versions:
+      - "1.8.0"
+  goenv:
+    default: "1.24.6"
+    versions:
+      - "1.24.6"
