--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -260,10 +260,12 @@ run = 'move-node-to-workspace C'
 if.app-id = 'com.apple.iCal'
 run = 'move-node-to-workspace C'
 
+# Google Calendar
 [[on-window-detected]]
 if.app-id = 'com.brave.Browser.app.kjbdgfilnfhdoflbpgamdcdgpehopbep'
 run = 'move-node-to-workspace C'
 
+# Gmail
 [[on-window-detected]]
 if.app-id = 'com.brave.Browser.app.fmgjjmmmlfnkbppncabfkddbjimcfncm'
 run = 'move-node-to-workspace C'
@@ -286,6 +288,10 @@ if.app-id = 'md.obsidian'
 run = 'move-node-to-workspace N'
 
 [[on-window-detected]]
+if.app-id = 'notion.id'
+run = 'move-node-to-workspace N'
+
+[[on-window-detected]]
 if.app-id = 'com.tinyspeck.slackmacgap'
 run = 'move-node-to-workspace S'
 
@@ -295,6 +301,16 @@ run = 'move-node-to-workspace S'
 
 [[on-window-detected]]
 if.app-id = 'us.zoom.xos'
+run = 'move-node-to-workspace S'
+
+# Google Meet
+[[on-window-detected]]
+if.app-id = 'com.brave.Browser.app.kjgfgldnnfoeklkmfkjfagphfepbbdan'
+run = 'move-node-to-workspace S'
+
+# ChatGPT
+[[on-window-detected]]
+if.app-id = 'com.brave.Browser.app.cadlkienfkclaiaibeoongdcgmdikeeg'
 run = 'move-node-to-workspace S'
 
 [[on-window-detected]]
