--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -8,6 +8,7 @@ packages:
       - "nikitabobko/tap"
       - "norwoodj/tap"
       - "snyk/tap"
+      - "argoproj/tap"
     brews:
       - "pycparser"
       - "watch"
@@ -22,6 +23,7 @@ packages:
       - "direnv"
       - "docker-compose"
       - "fzf"
+      - "fd"
       - "gcc"
       - "gh"
       - "git"
@@ -53,6 +55,7 @@ packages:
       - "tgenv"
       - "thefuck"
       - "tree"
+      - "uv"
       - "virtualenv"
       - "wget"
       - "yamlfmt"
@@ -65,6 +68,7 @@ packages:
       - "hashicorp/tap/vault"
       - "norwoodj/tap/helm-docs"
       - "snyk/tap/snyk"
+      - "argoproj/tap/kubectl-argo-rollouts"
   darwin:
     taps:
       - "1password/tap"
