chore(aerospace): update workspace assignments and application detection rules
- Modified workspace assignments in the after-startup command for better organization.
- Adjusted gaps settings for improved layout.
- Updated application detection rules to move specific applications to designated workspaces, including changes for Brave Browser, Zoom, and Slack.

--- a/dot_aerospace.toml
+++ b/dot_aerospace.toml
@@ -14,15 +14,14 @@ after-startup-command = [
     # so it won't be run twice on AeroSpace restart
     'exec-and-forget borders active_color=0xffcba6f7 inactive_color=0xff45475a width=8.0',
     'move-workspace-to-monitor --workspace "1" "main"',
-    'move-workspace-to-monitor --workspace "2" "secondary"',
-    'move-workspace-to-monitor --workspace "B" "secondary"',
-    'move-workspace-to-monitor --workspace "C" "main"',
-    'move-workspace-to-monitor --workspace "E" "secondary"',
-    # 'move-workspace-to-monitor --workspace "F" "main"',
-    'move-workspace-to-monitor --workspace "M" "main"',
-    'move-workspace-to-monitor --workspace "N" "main"',
-    'move-workspace-to-monitor --workspace "S" "main"',
-    'move-workspace-to-monitor --workspace "T" "secondary"',
+    'move-workspace-to-monitor --workspace "2" "main"',
+    'move-workspace-to-monitor --workspace "A" "secondary"',
+    'move-workspace-to-monitor --workspace "S" "secondary"',
+    'move-workspace-to-monitor --workspace "D" "secondary"',
+    'move-workspace-to-monitor --workspace "3" "main"',
+    'move-workspace-to-monitor --workspace "Q" "main"',
+    'move-workspace-to-monitor --workspace "W" "main"',
+    'move-workspace-to-monitor --workspace "E" "main"',
     # Set Cursor to vertical accordion layout
     "exec-and-forget aerospace layout --window-id $(aerospace list-windows --all | grep 'Cursor' | head -n1 | awk '{print $1}') v_accordion"
 ]
@@ -73,12 +72,12 @@ preset = 'qwerty'
 #                 Monitor pattern is the same as for 'workspace-to-monitor-force-assignment'.
 #                 See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
-inner.horizontal = 8
-inner.vertical =   8
-outer.left =       8
-outer.bottom =     8
-outer.top =        8
-outer.right =      8
+inner.horizontal = 16
+inner.vertical =   16
+outer.left =       16
+outer.bottom =     16
+outer.top =        16
+outer.right =      16
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -135,39 +134,44 @@ alt-1 = 'workspace 1'
 alt-ctrl-cmd-shift-1 = 'workspace 1'
 alt-2 = 'workspace 2'
 alt-ctrl-cmd-shift-2 = 'workspace 2'
-# alt-3 = 'workspace 3'
+alt-3 = 'workspace 3'
+alt-ctrl-cmd-shift-3 = 'workspace 3'
 # alt-4 = 'workspace 4'
 # alt-5 = 'workspace 5'
 # alt-6 = 'workspace 6'
 # alt-7 = 'workspace 7'
 # alt-8 = 'workspace 8'
 # alt-9 = 'workspace 9'
-# alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
-alt-b = 'workspace B'
-alt-ctrl-cmd-shift-b = 'workspace B'
-alt-c = 'workspace C'
-alt-ctrl-cmd-shift-c = 'workspace C'
-# alt-d = 'workspace D'
+alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
+alt-ctrl-cmd-shift-a = 'workspace A'
+# alt-b = 'workspace B'
+# alt-ctrl-cmd-shift-b = 'workspace B'
+# alt-c = 'workspace C'
+# alt-ctrl-cmd-shift-c = 'workspace C'
+alt-d = 'workspace D'
+alt-ctrl-cmd-shift-d = 'workspace D'
 alt-e = 'workspace E'
 alt-ctrl-cmd-shift-e = 'workspace E'
 # alt-f = 'workspace F'
 # alt-g = 'workspace G'
 # alt-i = 'workspace I'
-alt-m = 'workspace M'
-alt-ctrl-cmd-shift-m = 'workspace M'
-alt-n = 'workspace N'
-alt-ctrl-cmd-shift-n = 'workspace N'
+# alt-m = 'workspace M'
+# alt-ctrl-cmd-shift-m = 'workspace M'
+# alt-n = 'workspace N'
+# alt-ctrl-cmd-shift-n = 'workspace N'
 # alt-o = 'workspace O'
 # alt-p = 'workspace P'
-# alt-q = 'workspace Q'
+alt-q = 'workspace Q'
+alt-ctrl-cmd-shift-q = 'workspace Q'
 # alt-r = 'workspace R'
 alt-s = 'workspace S'
 alt-ctrl-cmd-shift-s = 'workspace S'
-alt-t = 'workspace T'
-alt-ctrl-cmd-shift-t = 'workspace T'
+# alt-t = 'workspace T'
+# alt-ctrl-cmd-shift-t = 'workspace T'
 # alt-u = 'workspace U'
 # alt-v = 'workspace V'
-# alt-w = 'workspace W'
+alt-w = 'workspace W'
+alt-ctrl-cmd-shift-w = 'workspace W'
 # alt-x = 'workspace X'
 # alt-y = 'workspace Y'
 # alt-z = 'workspace Z'
@@ -175,32 +179,32 @@ alt-ctrl-cmd-shift-t = 'workspace T'
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 alt-shift-1 = 'move-node-to-workspace 1'
 alt-shift-2 = 'move-node-to-workspace 2'
-# alt-shift-3 = 'move-node-to-workspace 3'
+alt-shift-3 = 'move-node-to-workspace 3'
 # alt-shift-4 = 'move-node-to-workspace 4'
 # alt-shift-5 = 'move-node-to-workspace 5'
 # alt-shift-6 = 'move-node-to-workspace 6'
 # alt-shift-7 = 'move-node-to-workspace 7'
 # alt-shift-8 = 'move-node-to-workspace 8'
 # alt-shift-9 = 'move-node-to-workspace 9'
-# alt-shift-a = 'move-node-to-workspace A'
-alt-shift-b = 'move-node-to-workspace B'
-alt-shift-c = 'move-node-to-workspace C'
-# alt-shift-d = 'move-node-to-workspace D'
+alt-shift-a = 'move-node-to-workspace A'
+# alt-shift-b = 'move-node-to-workspace B'
+# alt-shift-c = 'move-node-to-workspace C'
+alt-shift-d = 'move-node-to-workspace D'
 alt-shift-e = 'move-node-to-workspace E'
 # alt-shift-f = 'move-node-to-workspace F'
 # alt-shift-g = 'move-node-to-workspace G'
 # alt-shift-i = 'move-node-to-workspace I'
-alt-shift-m = 'move-node-to-workspace M'
-alt-shift-n = 'move-node-to-workspace N'
+# alt-shift-m = 'move-node-to-workspace M'
+# alt-shift-n = 'move-node-to-workspace N'
 # alt-shift-o = 'move-node-to-workspace O'
 # alt-shift-p = 'move-node-to-workspace P'
-# alt-shift-q = 'move-node-to-workspace Q'
+alt-shift-q = 'move-node-to-workspace Q'
 # alt-shift-r = 'move-node-to-workspace R'
 alt-shift-s = 'move-node-to-workspace S'
-alt-shift-t = 'move-node-to-workspace T'
+# alt-shift-t = 'move-node-to-workspace T'
 # alt-shift-u = 'move-node-to-workspace U'
 # alt-shift-v = 'move-node-to-workspace V'
-# alt-shift-w = 'move-node-to-workspace W'
+alt-shift-w = 'move-node-to-workspace W'
 # alt-shift-x = 'move-node-to-workspace X'
 # alt-shift-y = 'move-node-to-workspace Y'
 # alt-shift-z = 'move-node-to-workspace Z'
@@ -238,88 +242,88 @@ shift-down = ['volume set 0', 'mode main']
 
 [[on-window-detected]]
 if.app-id = 'app.zen-browser.zen'
-run = 'move-node-to-workspace B'
+run = 'move-node-to-workspace A'
 
 [[on-window-detected]]
 if.app-id = 'org.mozilla.firefox'
-run = 'move-node-to-workspace B'
+run = 'move-node-to-workspace A'
 
 [[on-window-detected]]
 if.app-id = 'com.google.Chrome'
-run = 'move-node-to-workspace B'
+run = 'move-node-to-workspace A'
 
 [[on-window-detected]]
 if.app-id = 'com.brave.Browser'
-run = 'move-node-to-workspace B'
+run = 'move-node-to-workspace A'
 
 [[on-window-detected]]
 if.app-id = 'com.apple.mail'
-run = 'move-node-to-workspace C'
+run = 'move-node-to-workspace W'
 
 [[on-window-detected]]
 if.app-id = 'com.apple.iCal'
-run = 'move-node-to-workspace C'
+run = 'move-node-to-workspace W'
 
 # Google Calendar
 [[on-window-detected]]
 if.app-id = 'com.brave.Browser.app.kjbdgfilnfhdoflbpgamdcdgpehopbep'
-run = 'move-node-to-workspace C'
+run = 'move-node-to-workspace W'
 
 # Gmail
 [[on-window-detected]]
 if.app-id = 'com.brave.Browser.app.fmgjjmmmlfnkbppncabfkddbjimcfncm'
-run = 'move-node-to-workspace C'
+run = 'move-node-to-workspace W'
 
 [[on-window-detected]]
 if.app-id = 'com.microsoft.VSCode'
-run = 'move-node-to-workspace E'
+run = 'move-node-to-workspace S'
 
 # Cursor
 [[on-window-detected]]
 if.app-id = 'com.todesktop.230313mzl4w4u92'
-run = 'move-node-to-workspace E'
+run = 'move-node-to-workspace S'
 
 [[on-window-detected]]
 if.app-id = 'com.spotify.client'
-run = 'move-node-to-workspace M'
-
-[[on-window-detected]]
-if.app-id = 'md.obsidian'
-run = 'move-node-to-workspace N'
-
-[[on-window-detected]]
-if.app-id = 'notion.id'
-run = 'move-node-to-workspace N'
-
-[[on-window-detected]]
-if.app-id = 'com.electron.asana'
-run = 'move-node-to-workspace N'
-
-[[on-window-detected]]
-if.app-id = 'com.tinyspeck.slackmacgap'
-run = 'move-node-to-workspace S'
-
-[[on-window-detected]]
-if.app-id = 'com.microsoft.teams2'
-run = 'move-node-to-workspace S'
-
-[[on-window-detected]]
-if.app-id = 'us.zoom.xos'
-run = 'move-node-to-workspace S'
-
-# Google Meet
-[[on-window-detected]]
-if.app-id = 'com.brave.Browser.app.kjgfgldnnfoeklkmfkjfagphfepbbdan'
-run = 'move-node-to-workspace S'
+run = 'move-node-to-workspace 1'
 
 # ChatGPT
 [[on-window-detected]]
 if.app-id = 'com.brave.Browser.app.cadlkienfkclaiaibeoongdcgmdikeeg'
-run = 'move-node-to-workspace S'
+run = 'move-node-to-workspace 2'
+
+[[on-window-detected]]
+if.app-id = 'com.electron.asana'
+run = 'move-node-to-workspace 3'
+
+[[on-window-detected]]
+if.app-id = 'md.obsidian'
+run = 'move-node-to-workspace E'
+
+[[on-window-detected]]
+if.app-id = 'notion.id'
+run = 'move-node-to-workspace E'
+
+[[on-window-detected]]
+if.app-id = 'com.tinyspeck.slackmacgap'
+run = 'move-node-to-workspace Q'
+
+[[on-window-detected]]
+if.app-id = 'com.microsoft.teams2'
+run = 'move-node-to-workspace Q'
+
+[[on-window-detected]]
+if.app-id = 'us.zoom.xos'
+run = 'move-node-to-workspace Q'
+
+# Google Meet
+[[on-window-detected]]
+if.app-id = 'com.brave.Browser.app.kjgfgldnnfoeklkmfkjfagphfepbbdan'
+run = 'move-node-to-workspace Q'
 
 [[on-window-detected]]
 if.app-id = 'com.mitchellh.ghostty'
-run = 'move-node-to-workspace T'
+run = 'move-node-to-workspace D'
 
 # wildcard for all apps that don't have a specific rule
 [[on-window-detected]]
