chore(packages.yaml, env.zsh): add krew for kubectl plugin management
- Included "krew" in packages.yaml to enhance kubectl plugin management capabilities.
- Updated env.zsh to add krew's binary path to the system PATH for easy access to installed plugins.

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -69,6 +69,7 @@ packages:
       - "norwoodj/tap/helm-docs"
       - "snyk/tap/snyk"
       - "argoproj/tap/kubectl-argo-rollouts"
+      - "krew"
   darwin:
     taps:
       - "1password/tap"
