chore(k9s): update configuration and add new plugins
- Enabled live view auto-refresh and set read-only mode in k9s configuration.
- Updated UI skin and mouse settings for improved user experience.
- Added new plugins for managing ArgoCD and Argo Rollouts, enhancing functionality for Kubernetes operations.
- Introduced various commands for pod management, including logs, port forwarding, and resource scaling.

--- a/dot_config/k9s/config.yaml
+++ b/dot_config/k9s/config.yaml
@@ -1,17 +1,18 @@
 k9s:
-  liveViewAutoRefresh: false
+  liveViewAutoRefresh: true
   screenDumpDir: /tmp/k9s/screen-dumps
   refreshRate: 2
   maxConnRetry: 5
-  readOnly: false
+  readOnly: true
   noExitOnCtrlC: false
   ui:
-    skin: catppuccin-mocha-transparent
-    enableMouse: true
+    skin: catppuccin-latte-transparent
+    enableMouse: false
     headless: true
     logoless: false
     crumbsless: false
-    reactive: false
+    splashless: false
+    reactive: true
     noIcons: false
     defaultsToFullScreen: false
   skipLatestRevCheck: false
@@ -23,7 +24,7 @@ k9s:
       cpu: 100m
       memory: 100Mi
   imageScans:
-    enable: false
+    enable: true
     exclusions:
       namespaces: []
       labels: {}
